--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         <div>
           <button class="btn btn-block btn-info ripple-effect" type="submit" name="Submit" alt="sign in" >Sign In</button>
         </div>
+        <div class="signup">
+          <p>If you don't have an account, Please 
+            <a href="#" class="link-user-actions"  >
+                <strong>Sign Up</strong>
+            </a></p>
+        </div>
     </div>
     </form>
   </div>
