--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="signup">
           <p>If you don't have an account, Please 
-            <a href="#" class="link-user-actions"  >
+            <a href="pages/register.html" class="link-user-actions"  >
                 <strong>Sign Up</strong>
             </a></p>
         </div>
