--- a/pages/register.html
+++ b/pages/register.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link href="../src/css/register.css" rel="stylesheet" type="text/css" media="all">
     <title>Register</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="wrapper row1">
+        <header id="header" class="hoc clear"> 
+          <div id="logo" class="fl_left">
+            <h1><a href="../index.html">UrQ</a></h1>
+            <p>Best Queue Best Service</p>
+          </div>
+        </header>
+      </div>
 </body>
 </html>
