edit header register layout

--- a/pages/register.html
+++ b/pages/register.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <link href="../src/css/register.css" rel="stylesheet" type="text/css" media="all">
-    <title>Register</title>
+  <meta charset="UTF-8">
+  <link href="../src/css/register.css" rel="stylesheet" type="text/css" media="all">
+  <title>ลงทะเบียน</title>
 </head>
+
 <body>
-    <div class="wrapper row1">
-        <header id="header" class="hoc clear"> 
-          <div id="logo" class="fl_left">
-            <h1><a href="../index.html">UrQ</a></h1>
-            <p>Best Queue Best Service</p>
-          </div>
-        </header>
-      </div>
+  <div class="row1">
+
+    <div class="header_left">
+        <h1>UrQ</h1>
+        <p>Best Queue Best Service
+        </p>
+
+    </div>
 </body>
+
 </html>
