--- a/pages/register.html
+++ b/pages/register.html
@@ -11,11 +11,66 @@
   <div class="row1">
 
     <div class="header_left">
-        <h1>UrQ</h1>
-        <p>Best Queue Best Service
-        </p>
-
+      <h1>UrQ</h1>
+      <p>Best Queue Best Service
+      </p>
     </div>
+  </div>
+  <div class="content">
+    <div id="apply">
+      <h1>
+        <strong>สมัครสมาชิก</strong>
+      </h1>
+    </div>
+    <div class="col-left">
+      <table id="input-left">
+        <tr>
+          <td class="label">
+            <label>ชื่อผู้ใช้</label>
+          </td>
+          <td class="input">
+            <input type="text" value="" placeholder="กรุณาระบุเป็นอักษรภาษาอังกฤษ" id="username" />
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>รหัสผ่าน</label>
+          </td>
+          <td class="input">
+            <input type="password" value="" id="password" />
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>ยืนยันรหัสผ่าน</label>
+          </td>
+          <td class="input">
+            <input type="password" value="" id="re-password" />
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>อีเมล์</label>
+          </td>
+          <td class="input">
+            <input type="email" value="" id="email" />
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>เบอร์โทรติดต่อ</label>
+          </td>
+          <td class="input">
+            <input type="text" value="" id="phone" placeholder="กรุณาระบุเป็นตัวเลข" />
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-right">
+      <h1>hello</h1>
+    </div>
+  </div>
+
 </body>
 
 </html>
