--- a/pages/register.html
+++ b/pages/register.html
@@ -67,10 +67,85 @@
       </table>
     </div>
     <div class="col-right">
-      <h1>hello</h1>
+      <table id="input-right">
+        <tr>
+          <td class="label">
+            <label>ชื่อร้านค้า</label>
+          </td>
+          <td class="input">
+            <input type="text" value="" id="name_store" />
+          </td>
+          <td class="col-3"><label>ประเภท</label></td>
+          <td>     
+              <select class="food_type">
+                  <option value="0">ร้านอาหารทั่วไป</option>
+                  <option value="1">เครื่องดื่ม/คาเฟ่</option>
+                  <option value="2">หมูกระทะ/หมูจุ่ม</option>
+                  <option value="3">บุฟเฟ่ต์</option>
+                </select>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>เวลาเปิด-ปิดทำการ</label>
+          </td>
+          <td class="input">
+            <input type="time" value="" id="open_time" />
+            <label class="label2">ถึง</label>
+            <input type="time" value="" id="close_time" />
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>รูปแบบการเรียกคิว</label>
+          </td>
+          <td>
+            <select class="queue_type">
+                <option value="0">เรียงตามหมายเลข</option>
+                <option value="1">กำหนดเลขเองได้</option>
+              </select>
+              
+          </td>
+          <td class="col-3">
+              <label>ประเภทการบริการ</label>
+          </td>
+          <td> 
+              <select class="service_type">
+                  <option value="0">จำกัดเวลา</option>
+                  <option value="1">ไม่จำกัดเวลา</option>
+                </select>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>เวลาในการให้บริการ
+              <br />(โดยเฉลี่ย)</label>
+          </td>
+          <td class="fill_num">
+            <input type="number" value="" id="้hour_service_time" />
+            <label class="label2">ชั่วโมง</label>
+            <input type="number" value="" id="min_service_time" />
+            <label class="label2">นาที</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">
+            <label>จำนวนพนักงาน
+              <br />ฝ่ายทำอาหาร</label>
+          </td>
+          <td class="fill_num">
+            <input type="number" value="" id="num_server" />
+            <label class="label2">คน</label>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="btn_regis">
+      <button class="button" type="submit">
+        <strong>ยืนยันการสมัครสมาชิก</strong>
+      </button>
     </div>
   </div>
-
 </body>
 
 </html>
