--- a/pages/home.html
+++ b/pages/home.html
@@ -14,6 +14,19 @@
             <p>Best Queue Best Service
             </p>
         </div>
+        <div class="header_right">
+            <ul id="menu">
+                <li><a href="home.html">หน้าหลัก</a></li>
+                <li>
+                    <a href="#">หมูสองชั้น</a>
+                    <ul class="sub-link">
+                        <li><a href="#">โปรไฟล์</a></li>
+                        <li><a href="#">ติดต่อเรา</a></li>
+                        <li><a href="../index.html">ออกจากระบบ</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
