--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="../src/css/home.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../src/css/nav.css" rel="stylesheet" type="text/css" media="all">
     <title>หน้าหลัก</title>
 </head>
 
