--- a/pages/register.html
+++ b/pages/register.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="../src/css/register.css" rel="stylesheet" type="text/css" media="all">
+  <link href="../src/css/nav.css" rel="stylesheet" type="text/css" media="all">
   <script src="../src/scripts/register.js"></script>
 </body>
   <title>ลงทะเบียน UrQ</title>
