home layout : add_name customer

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,16 +17,46 @@
         </div>
         <div class="header_right">
             <ul id="menu">
-                <li><a href="home.html">หน้าหลัก</a></li>
+                <li>
+                    <a href="home.html">หน้าหลัก</a>
+                </li>
                 <li>
                     <a href="#">หมูสองชั้น</a>
                     <ul class="sub-link">
-                        <li><a href="#">โปรไฟล์</a></li>
-                        <li><a href="#">ติดต่อเรา</a></li>
-                        <li><a href="../index.html">ออกจากระบบ</a></li>
+                        <li>
+                            <a href="#">โปรไฟล์</a>
+                        </li>
+                        <li>
+                            <a href="#">ติดต่อเรา</a>
+                        </li>
+                        <li>
+                            <a href="../index.html">ออกจากระบบ</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div class="content">
+        <div class="left-col">
+            <h1>เพิ่มรายชื่อจองคิว</h1>
+            <form id="post_name_cust" method='post'>
+                <div class="add_name">
+                    <table>
+                        <td>
+                            <input type="text" placeholder="ระบุชื่อลูกค้า" id="cust_name" />
+                            <button class="add-button">เพิ่ม</button>
+                            <button class="show-list">
+                                แสดง
+                                    <!--<img src="../src/images/show_list.png" width="26px" height="26px" />-->
+                            </button>
+                        </td>
+                    </table>
+
+                </div>
+
+            </form>
+
         </div>
     </div>
 </body>
