add next q button at home layout

--- a/pages/home.html
+++ b/pages/home.html
@@ -65,7 +65,9 @@
                     <label id="own_q">เจ้าของคิว : </label>
                     <label id="n_cust">Tari</label>
                 </div>
-            
+                <div class="call-next-btn">
+                    <button class="next_btn">เรียกคิวถัดไป</button>
+                </div>
             
             </div>
             <div class="call-q">
