add navigation to profile.html

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <link href="../src/css/nav.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../src/css/profile.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>โปรไฟล์</title>
 </head>
 <body>
-    
+    <div class="row1">
+        <div class="header_left">
+            <h1>UrQ</h1>
+            <p>Best Queue Best Service
+            </p>
+        </div>
+        <div class="header_right">
+            <ul id="menu">
+                <li>
+                    <a href="home.html">หน้าหลัก</a>
+                </li>
+                <li>
+                    <a href="#">หมูสองชั้น
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="sub-link">
+                        <li>
+                            <a href="#">โปรไฟล์</a>
+                        </li>
+                        <li>
+                            <a href="#">ติดต่อเรา</a>
+                        </li>
+                        <li>
+                            <a href="../index.html">ออกจากระบบ</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
