--- a/pages/profile.html
+++ b/pages/profile.html
@@ -20,7 +20,7 @@
         <div class="header_right">
             <ul id="menu">
                 <li>
-                    <a href="home.html">หน้าหลัก</a>
+                    <a href="./home.html">หน้าหลัก</a>
                 </li>
                 <li>
                     <a href="#">หมูสองชั้น
@@ -28,7 +28,7 @@
                     </a>
                     <ul class="sub-link">
                         <li>
-                            <a href="#">โปรไฟล์</a>
+                            <a href="./profile.html">โปรไฟล์</a>
                         </li>
                         <li>
                             <a href="#">ติดต่อเรา</a>
