add  reserve Q online

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,10 @@
                     </a>
                     <ul class="sub-link">
                         <li>
-                            <a href="#">โปรไฟล์</a>
+                            <a href="./profile.html">โปรไฟล์</a>
+                        </li>
+                        <li>
+                            <a href="#">จองออนไลน์</a>
                         </li>
                         <li>
                             <a href="#">ติดต่อเรา</a>
@@ -51,7 +54,7 @@
                         <input type="text" placeholder="ระบุชื่อลูกค้า" id="cust_name" />
                         <button class="add-button">เพิ่ม</button>
                         <button class="show-list">
-                            แสดง
+                            โชว์
                             <!--<img src="../src/images/show_list.png" width="26px" height="26px" />-->
                         </button>
                     </tr>
