--- a/pages/profile.html
+++ b/pages/profile.html
@@ -31,6 +31,9 @@
                             <a href="#">โปรไฟล์</a>
                         </li>
                         <li>
+                            <a href="#">จองออนไลน์</a>
+                        </li>
+                        <li>
                             <a href="#">ติดต่อเรา</a>
                         </li>
                         <li>
