prepare col right layout to add table for show reserve data

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -46,12 +46,13 @@
         </div>
     </div>
     <div class="content">
-        <div id="reserve">
-            <h1>
-                <strong>ระบบบริการจองคิวออนไลน์</strong>
-            </h1>
-        </div>
-        <div class="left">
+
+        <div class="col-left">
+            <div id="reserve">
+                <h1>
+                    <strong>ระบบบริการจองคิวออนไลน์</strong>
+                </h1>
+            </div>
             <form id="edit_pf" method='put'>
                 <div>
                     <select class="op-cl-reserve" id="op-cl-reserve" onchange="select()">
@@ -76,12 +77,14 @@
                             </div>
                         </tr>
                     </table>
-
                 </div>
-
             </form>
         </div>
-
+        <div class="col-right">
+            <h2>
+                ตารางแสดงรายชื่อผู้จอง
+            </h2>
+        </div>
     </div>
 </body>
 
