edit information of contact us

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,6 +44,20 @@
             </ul>
         </div>
     </div>
+    <div class="content">
+        <div id="contact">
+            <h1>
+                <strong>ติดต่อเรา</strong>
+            </h1>
+        </div>
+        <div class="detail">
+            <label>URQ Notification App Co.,LTD</label><br />
+            <label>123 หมู่ 4 ตำบลสุเทพ ถนนสุเทพ อำเภอเมือง จังหวัดเชียงใหม่ 50200</label><br/>
+            <label>Email: urqproject@gmail.com</label><br/>
+            <label>Tel: 082-1122334</label>
+        </div>
+
+    </div>
     
 </body>
 
