edit walk in layout

--- a/pages/home.html
+++ b/pages/home.html
@@ -44,23 +44,30 @@
         </div>
     </div>
     <div class="content">
-        <form id="post_name_cust" method='post'>
+        <div>
+
             <div class="add_name">
-                <table>
-                    <tr>
-                        <h2>เพิ่มรายชื่อจองคิว</h2>
-                    </tr>
-                    <tr>
-                        <input type="text" placeholder="ระบุชื่อลูกค้า" id="cust_name" />
-                        <button class="add-button">เพิ่ม</button>
-                        <button class="show-list">
-                            โชว์
-                            <!--<img src="../src/images/show_list.png" width="26px" height="26px" />-->
-                        </button>
-                    </tr>
-                </table>
+                <form id="post_name_cust" method='post'>
+                    <table>
+                        <tr>
+                            <h2>เพิ่มรายชื่อจองคิว</h2>
+                        </tr>
+                        <tr>
+                            <input type="text" placeholder="ระบุชื่อลูกค้า" id="cust_name" />
+                            <button class="add-button">เพิ่ม</button>
+                            <button class="show-list">
+                                โชว์
+                                <!--<img src="../src/images/show_list.png" width="26px" height="26px" />-->
+                            </button>
+                        </tr>
+                    </table>
+                </form>
+                <div class="list-q" id="list-q">
+                    <label >hello</label>
+                </div>
             </div>
-        </form>
+        </div>
+
         <div class="next-q">
             <h1>คิวปัจจุบัน</h1>
             <label id="num_q">0</label>
